<resources>
    <string name="app_name">Desafio Mesa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="menu_about">Sobre</string>
    <string name="menu_news">News</string>
    <string name="menu_share">Share</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>

    <string name="error_email_or_password_empty">E-mail ou password is empty</string>
    <string name="error_email_empty">E-mail is empty</string>
    <string name="error_name_empty">Name is empty</string>
    <string name="error_load_news">Não foi possível carregar as notícias</string>
    <string name="error_login">Login failed</string>
    <string name="error_signup">Couldn\'t possible do sign up</string>
    <string name="error_no_internet">No internet</string>
    <string name="error_password_empty">Password is empty</string>

    <string-array name="list_time">
        <item>30 seconds</item>
        <item>45 seconds</item>
        <item>1 minute</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
    </string-array>

    <string name="created_by_rodrigo_amora">Criado por Rodrigo Amora</string>
    <string name="communicate">Communicate</string>
    <string name="highlights">Highlights</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="news">News</string>
    <string name="signing_in">Signing In</string>
    <string name="signing_up">Signing Up</string>
    <string name="share_title">Desafio Mesa</string>
    <string name="share_text">Use the app Desafio Mesa!</string>
    <string name="time_to_refresh_news">How long do you want the app to update the news?</string>
    <string name="wait">Wait...</string>
    <string name="version">Version:</string>
</resources>
